tests/snapshots/sdk_conversion_snapshots__openai__openai_receipt_to_response.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: resp
---
{
  "id": "[id]",
  "object": "chat.completion",
  "created": "[timestamp]",
  "model": "gpt-4o",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "content": "Hello! I can help with that."
      },
      "finish_reason": "stop"
    }
  ],
  "usage": {
    "prompt_tokens": 100,
    "completion_tokens": 50,
    "total_tokens": 150
  }
}
