tests/snapshots/sdk_conversion_snapshots__openai__openai_simple_text_to_work_order.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: wo
---
{
  "id": "[uuid]",
  "task": "What is 2+2?",
  "lane": "patch_first",
  "workspace": {
    "root": ".",
    "mode": "staged",
    "include": [],
    "exclude": []
  },
  "context": {
    "files": [],
    "snippets": []
  },
  "policy": {
    "allowed_tools": [],
    "disallowed_tools": [],
    "deny_read": [],
    "deny_write": [],
    "allow_network": [],
    "deny_network": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": []
  },
  "config": {
    "model": "gpt-4o",
    "vendor": {
      "dialect": "open_ai"
    },
    "env": {},
    "max_budget_usd": null,
    "max_turns": null
  }
}
