tests/snapshots/sdk_conversion_snapshots__openai__openai_system_message_to_work_order.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: wo
---
{
  "id": "[uuid]",
  "task": "Hello!",
  "lane": "patch_first",
  "workspace": {
    "root": ".",
    "mode": "staged",
    "include": [],
    "exclude": []
  },
  "context": {
    "files": [],
    "snippets": []
  },
  "policy": {
    "allowed_tools": [],
    "disallowed_tools": [],
    "deny_read": [],
    "deny_write": [],
    "allow_network": [],
    "deny_network": [],
    "require_approval_for": []
  },
  "requirements": {
    "required": []
  },
  "config": {
    "model": "gpt-4o",
    "vendor": {
      "dialect": "open_ai",
      "temperature": 1.0
    },
    "env": {},
    "max_budget_usd": null,
    "max_turns": null
  }
}
