tests/snapshots/sdk_conversion_snapshots__openai__openai_tool_receipt_to_response.snap
---
source: tests/sdk_conversion_snapshots.rs
expression: resp
---
{
  "id": "[id]",
  "object": "chat.completion",
  "created": "[timestamp]",
  "model": "gpt-4o",
  "choices": [
    {
      "index": 0,
      "message": {
        "role": "assistant",
        "content": "The weather in San Francisco is 72°F and sunny.",
        "tool_calls": [
          {
            "id": "call_abc123",
            "type": "function",
            "function": {
              "name": "get_weather",
              "arguments": "{\"location\":\"San Francisco\"}"
            }
          }
        ]
      },
      "finish_reason": "tool_calls"
    }
  ],
  "usage": {
    "prompt_tokens": 150,
    "completion_tokens": 75,
    "total_tokens": 225
  }
}
